Added picocli and guice