@@ -10,6 +10,11 @@ repositories {
 
 dependencies {
     implementation 'com.google.guava:guava:28.2-jre'
+    implementation 'com.google.inject:guice:4.2.3'
+
+    // Picocli
+    implementation 'info.picocli:picocli:4.2.0'
+    annotationProcessor 'info.picocli:picocli-codegen:4.2.0'
 
     // Junit
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
@@ -22,7 +27,10 @@ compileJava   {
 }
 
 application {
-    mainClassName = 'legendary.octo.sniffle.App'
+    mainClassName = 'legendary.octo.sniffle.app.App'
+
+    // Guice
+    applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
 }
 
 test {
